tests/cases/compiler/newMissingIdentifier/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/newMissingIdentifier.ts`, Apache-2.0 License

var x = new ();
//~^ ERROR: Expression expected.